--- a/surgas/src/styles/App.css
+++ b/surgas/src/styles/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+/* Colores primarios */
+
+.app-bg-primary {
+    color: #fff;
+    background-color: #0a35a3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-bg-secondary {
+    color: #fff;
+    background-color: #2c52c5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-bg-complementary {
+    color: #fff;
+    background-color: #bfa52a;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Colores complementarios */
+
+.blue {
+    color: #20A3CC;
+    background-color: #20A3CC;
 }
 
-.App-link {
-  color: #61dafb;
+.green {
+    color: #00C853;
+    background-color: #00C853;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red {
+    color: #FF0000;
+    background-color: #FF0000;
+}
+
+/* Colores análogos */
+
+.light-blue {
+    color: #9CC3E9;
+    background-color: #9CC3E9;
+}
+
+.light-green {
+    color: #85D49E;
+    background-color: #85D49E;
+}
+
+.light-red {
+    color: #FF9999;
+    background-color: #FF9999;
+}
+
+/* Colores triadico */
+
+.purple {
+    color: #7B329A;
+    background-color: #7B329A;
+}
+
+.yellow {
+    color: #FFF700;
+    background-color: #FFF700;
+}
+
+.teal {
+    color: #1ABC9C;
+    background-color: #1ABC9C;
+}
+
+.gradient {
+    background-image: linear-gradient(to right, #587DDC, #FF6600);
+}
+
+.shadow {
+    box-shadow: 0 0 10px #587DDC;
+}
+
+.app-bg-secondary .link {
+    color: #fff
 }
